--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "language-thor",
-  "version": "1.0.1",
-  "description": "Atom syntax highlighting for THOR log files",
+  "version": "1.0.2",
+  "description": "Atom syntax highlighting for THOR, SPARK and LOKI log files",
   "repository": {
     "type": "git",
     "url": "https://github.com/Neo23x0/language-thor"
